contact done fix overflow

--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -2,18 +2,40 @@
   .body1 {
     width: 100%;
     height: 710px;
-    margin-top: 50px;
+    margin: 20px 0px 25px 0px;
   }
 
+
+.contact-wrapper {
+  display: grid;
+  grid-template-rows: 25% 75%;
+  width: 100%;
+  height: 100%;
+}
+
+.formWrapper {
+  display: grid;
+  /* max-width: 100%;
+  max-height: 100%; */
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr 1fr 1fr 3fr;
+  grid-row-gap: 15px;
+  grid-template-areas:
+  "name name name . . . "
+  "email email email email . ."
+  "subject subject subject subject subject . "
+  "message message message message message message"
+  ". . . . . send";
+}
 
 
   .title1{
     font-family:  'Maddison Signature DEMO';
     text-align: center;
-    font-size: 60px;
+    font-size: 3.75em;
   }
 
-  .form{
+  .formArea {
     width: 70%;
     height: 70%;
     margin: 0 auto;
@@ -21,27 +43,45 @@
 
   .name{
     height: 40px;
-    width: 400px;
-    margin-bottom: 20px;
+    /* width: 400px;
+    margin-bottom: 20px; */
     border: 6px solid #00EBFF;
+    grid-area: name;
+    /* grid-column: 1/4;
+    grid-row: 1/2; */
+    resize: none;
   }
   .email {
-    height: 40px;
+    /* height: 40px;
     width: 600px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; */
+    height: 40px;
     border: 6px solid #00FF80;
+    grid-area: email;
+    /* grid-column: 1/5;
+    grid-row: 2/3; */
+    resize: none;
   }
   .subject {
-    height: 40px;
+    /* height: 40px;
     width: 800px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; */
+    height: 40px;
     border: 6px solid #E2FF00;
+    grid-area: subject;
+    /* grid-column: 1/6;
+    grid-row: 3/4; */
+    resize: none;
   }
 
   .message {
-    height: 250px;
-    width: 990px;
+    /* height: 250px;
+    width: 990px; */
     border: 6px solid #FF9D00;
+    grid-area: message;
+    /* grid-column: 1/7;
+    grid-row: 4/5; */
+    resize: none;
   }
 
   ::placeholder {
@@ -59,10 +99,11 @@
     background: transparent;
     font-size: 50px;
     position: relative;
-    bottom: 50px;
-    right: 23px;
-    float: right;
-    height: 100px;
+    bottom: 58px;
+    height: 80px;
+    grid-area: send;
+    /* grid-column: 5/7;
+    grid-row: 5; */
   }
 
   .submitCover {
